Add _variables file, set a margin-left for monday at 0, change transition to general

--- a/src/index.html
+++ b/src/index.html
@@ -11,37 +11,37 @@
   <body>
     <main class="wrapper">
       <div class="calendar calendar--start-day-mon calendar_month_lenght--29">
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
-        <div class="calendar_day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
 
     </main>
