add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar-start-day--mon calendar-month-length--28">
-        <div class="day day__01"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
-        <div class="day"></div>
+    <div class="calendar calendar--start-day--sun calendar--month-length--31">
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
     </div>
   </body>
 </html>
