--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
-    <div class="calendar calendar--start-day-sun calendar--month-length-29">
+    <h1 id="date">Calendar</h1>
+    <div class="calendar calendar--start-day-sun calendar--month-length-28">
       <div class="calendar__day-1"></div>
       <div class="calendar__day-2"></div>
       <div class="calendar__day-3"></div>
