--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,38 @@
   </head>
   <body>
     <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+      <div class="calendar_day"></div>
+    </div>
   </body>
 </html>
