--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Calendar</h1>
-    <div class="calendar">
+    <div class="calendar calendar--30 calendar--start-day--sun">
       <div class="calendar_day"></div>
       <div class="calendar_day"></div>
       <div class="calendar_day"></div>
