--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body class="page-content">
 
     <section 
-      class="calendar calendar--start-day_mon calendar--month-length_31">
+      class="calendar calendar--start-day_sun calendar--month-length_31">
       <!-- The lint test does not allow breaking classes into separate lines -->
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
