--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <section class="calendar calendar--month-length--31">
-      <div class="calendar__day calendar__day--start-day--mon"></div>
+    <section class="calendar calendar--month-length--31 calendar--start-day--mon">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
