--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <section class="calendar calendar--month-length--31 calendar--start-day--mon">
+    <section class="calendar calendar--month-length-31 calendar--start-day-mon">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
