add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,37 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar__row">
-        <div class="calendar__row-block calendar__row-block--sun"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-        <div class="calendar__row-block"></div>
-      </div>
+      <div class="calendar__day calendar__day--sun"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
