first day logic fixed

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body>
-    <ul class="calendar calendar__start-day--mon calendar__month-length--31">
+    <ul class="calendar calendar--month-length-31 calendar--start-day-wen">
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
