--- a/src/index.html
+++ b/src/index.html
@@ -7,50 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
+    <div class="calendar calendar--start-day-sun calendar--month-length-29">
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
+      <div class="calendar__day"><p></p></div>
     </div>
-    <img src="../reference.png" alt="calendar">
   </body>
 </html>
