add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Calendar</h1>
-    <div class="calendar calendar--month-length_31 calendar--start-mon">
+    <div class="calendar calendar--month-length_31 calendar--start-day_sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
