--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day-sun calendar--month-length-29">
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
-      <div class="calendar__day"><p></p></div>
+    <div class="container">
+      <div class="calendar calendar--start-day-sun calendar--month-length-30">
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+        <div class="calendar__day"><p></p></div>
+      </div>
     </div>
   </body>
 </html>
