--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body class="page">
-    <div class="calendar calendar--start-day--sun calendar--month-length--28">
+    <div class="calendar calendar--start-day--fri calendar--month-length--31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
