--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <div class="calendar calendar--start-mon calendar--month-29">
+  <body class="pagecontent">
+    <div class="calendar calendar--start-tue calendar--month-29">
       <div class="calendar__square"></div>
       <div class="calendar__square"></div>
       <div class="calendar__square"></div>
