--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar__cells calendar__cells--last-months-day--31">
+        <div class="calendar__cell calendar__cell--day-of-week--mon"></div>
+        <div class="calendar__cell calendar__cell--day-of-week--tue"></div>
+        <div class="calendar__cell calendar__cell--day-of-week--wed"></div>
+        <div class="calendar__cell calendar__cell--day-of-week--thu"></div>
+        <div class="calendar__cell calendar__cell--day-of-week--fri"></div>
+        <div class="calendar__cell calendar__cell--day-of-week--sat"></div>
+        <div class="calendar__cell calendar__cell--day-of-week--sun"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+      </div>
+    </div>
   </body>
 </html>
