--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar_start-day--sun calendar_month-length--29">
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+      <div class="calendar__card"></div>
+    </div>
   </body>
 </html>
