--- a/src/index.html
+++ b/src/index.html
@@ -9,37 +9,37 @@
   <body>
     <div class="wrap">
       <div class="calendary calendary--start-day-sun calendary--month-length-31">
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
-        <div class="calendary__day"><p></p></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
+        <div class="calendary__day"></div>
       </div>
     </div>
   </body>
