--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar__cells calendar__cells--last-months-day--31">
-        <div class="calendar__cell calendar__cell--start-day--mon"></div>
-        <div class="calendar__cell calendar__cell--start-day--tue"></div>
-        <div class="calendar__cell calendar__cell--start-day--wed"></div>
-        <div class="calendar__cell calendar__cell--start-day--thu"></div>
-        <div class="calendar__cell calendar__cell--start-day--fri"></div>
-        <div class="calendar__cell calendar__cell--start-day--sat"></div>
-        <div class="calendar__cell calendar__cell--start-day--sun"></div>
+      <div class="calendar__cells calendar__cells--last-months-day--31 calendar__cells--start-day--mon">
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
         <div class="calendar__cell"></div>
         <div class="calendar__cell"></div>
         <div class="calendar__cell"></div>
