--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar month-length start-day">
+      <div class="calendar__day calendar__day-sun"></div>
+
+      <div class="calendar__day calendar__day-mon"></div>
+      <div class="calendar__day calendar__day-tue"></div>
+      <div class="calendar__day calendar__day-wed"></div>
+      <div class="calendar__day calendar__day-thu"></div>
+      <div class="calendar__day calendar__day-fri"></div>
+      <div class="calendar__day calendar__day-sat"></div>
+      <div class="calendar__day calendar__day-sun"></div>
+
+      <div class="calendar__day calendar__day-mon"></div>
+      <div class="calendar__day calendar__day-tue"></div>
+      <div class="calendar__day calendar__day-wed"></div>
+      <div class="calendar__day calendar__day-thu"></div>
+      <div class="calendar__day calendar__day-fri"></div>
+      <div class="calendar__day calendar__day-sat"></div>
+      <div class="calendar__day calendar__day-sun"></div>
+
+      <div class="calendar__day calendar__day-mon"></div>
+      <div class="calendar__day calendar__day-tue"></div>
+      <div class="calendar__day calendar__day-wed"></div>
+      <div class="calendar__day calendar__day-thu"></div>
+      <div class="calendar__day calendar__day-fri"></div>
+      <div class="calendar__day calendar__day-sat"></div>
+      <div class="calendar__day calendar__day-sun"></div>
+
+      <div class="calendar__day calendar__day-mon"></div>
+      <div class="calendar__day calendar__day-tue"></div>
+      <div class="calendar__day calendar__day-wed"></div>
+      <div class="calendar__day calendar__day-thu"></div>
+      <div class="calendar__day calendar__day-fri"></div>
+      <div class="calendar__day calendar__day-sat"></div>
+      <div class="calendar__day calendar__day-sun"></div>
+
+      <div class="calendar__day calendar__day-mon"></div>
+      <div class="calendar__day calendar__day-tue"></div>
+    </div>
   </body>
 </html>
