--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <!-- November 2023 -->
-    <section
-      class="calendar calendar--start-day--wed calendar--month-length--30">
-
+    <section class="calendar calendar--start-day--wed calendar--month-length--30">
       <div class="calendar__days"></div>
       <div class="calendar__days"></div>
       <div class="calendar__days"></div>
@@ -42,7 +40,6 @@
       <div class="calendar__days"></div>
       <div class="calendar__days"></div>
       <div class="calendar__days"></div>
-
     </section>
   </body>
 </html>
