add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Calendar</h1>
+  <body class="page__body">
+    <div class="callendar">
+      <div class="callendar__week">
+        <div class="callendar__week-day">Mon</div>
+        <div class="callendar__week-day">Tue</div>
+        <div class="callendar__week-day">Wed</div>
+        <div class="callendar__week-day">Thu</div>
+        <div class="callendar__week-day">Fri</div>
+        <div class="callendar__week-day">Sat</div>
+        <div class="callendar__week-day">Sun</div>
+      </div>
+
+      <div class="callendar__month callendar__month--start-day--wed callendar__month--month-length--30">
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+      </div>
+    </div>
   </body>
 </html>
