deleted days in html

--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day calendar__day--mon1"></div>
-      <div class="calendar__day calendar__day--tue"></div>
-      <div class="calendar__day calendar__day--wed"></div>
-      <div class="calendar__day calendar__day--thu"></div>
-      <div class="calendar__day calendar__day--fri"></div>
-      <div class="calendar__day calendar__day--sat"></div>
-      <div class="calendar__day calendar__day--sun"></div>
-      <div class="calendar__day calendar__day--mon"></div>
-      <div class="calendar__day calendar__day--tue"></div>
-      <div class="calendar__day calendar__day--wed"></div>
-      <div class="calendar__day calendar__day--thu"></div>
-      <div class="calendar__day calendar__day--fri"></div>
-      <div class="calendar__day calendar__day--sat"></div>
-      <div class="calendar__day calendar__day--sun"></div>
-      <div class="calendar__day calendar__day--mon"></div>
-      <div class="calendar__day calendar__day--tue"></div>
-      <div class="calendar__day calendar__day--wed"></div>
-      <div class="calendar__day calendar__day--thu"></div>
-      <div class="calendar__day calendar__day--fri"></div>
-      <div class="calendar__day calendar__day--sat"></div>
-      <div class="calendar__day calendar__day--sun"></div>
-      <div class="calendar__day calendar__day--mon"></div>
-      <div class="calendar__day calendar__day--tue"></div>
-      <div class="calendar__day calendar__day--wed"></div>
-      <div class="calendar__day calendar__day--thu"></div>
-      <div class="calendar__day calendar__day--fri"></div>
-      <div class="calendar__day calendar__day--sat"></div>
-      <div class="calendar__day calendar__day--sun"></div>
-      <div class="calendar__day calendar__day--mon"></div>
-      <div class="calendar__day calendar__day--tue"></div>
-      <div class="calendar__day calendar__day--wed"></div>
+    <div class="calendar start-mon">
+      <div class="calendar__day mon-first"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
