--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="container">
-    <div class="calendar container__calendar calendar--month-length--29 calendar--start-day--tue">
+  <body class="body">
+    <div class="calendar calendar--month-length--30 calendar--start-day--wed">
       <div class="calendar__day day"></div>
       <div class="calendar__day day"></div>
       <div class="calendar__day day"></div>
