add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar start-mon">
+    <div class="calendar calendar--month-length--30">
       <div class="calendar__day mon-first"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
