--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="main" name="main">
+      <div class="callendar callendar--start-day-sat callendar--length-28">
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+        <div class="callendar__day"></div>
+      </div>
+    </main>
   </body>
 </html>
