calendar task solution

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/styles.scss">
   </head>
   <body>
     <h1>Calendar</h1>
+    <div class="calendar calendar__startday--sun calendar__month-lenght--29">
+      <div class="calendar__month">
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+      </div>
+    </div>
   </body>
 </html>
