--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="container">
+  <body class="body">
 
-    <div class="calendar calendar__day--sun calendar__month-length--31">
+    <div class="calendar calendar--day-sun calendar--month-length-31">
       <div class="calendar___item"></div>
       <div class="calendar___item"></div>
       <div class="calendar___item"></div>
