add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
 
-    <div class="calendar">
-      <div class="calendar__date calendar__date--start--day"></div>
+    <div class="calendar calendar--start-day--sun calendar--month-length--29">
       <div class="calendar__date"></div>
       <div class="calendar__date"></div>
       <div class="calendar__date"></div>
@@ -38,6 +37,10 @@
       <div class="calendar__date"></div>
       <div class="calendar__date"></div>
       <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+
 
     </div>
   </body>
