add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,50 @@
   </head>
   <body>
     <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar__header">
+        <div class="calendar__header-item">Monday</div>
+        <div class="calendar__header-item">Tuesday</div>
+        <div class="calendar__header-item">Wednesday</div>
+        <div class="calendar__header-item">Thursday</div>
+        <div class="calendar__header-item">Friday</div>
+        <div class="calendar__header-item">Saturday</div>
+        <div class="calendar__header-item">Sunday</div>
+      </div>
+    </div>
+
+    <div class="calendar-block calendar-block__day--thu calendar-block__month--31">
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+      <div class="calendar-item"></div>
+    </div>
   </body>
 </html>
