first-forth commit

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       <li class="calendar__item"></li>
       <li class="calendar__item"></li>
       <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
+      <li class="calendar__item"></li†>
       <li class="calendar__item"></li>
       <li class="calendar__item "></li>
       <li class="calendar__item "></li>
